- Added giphy tab - Moved loading message to giphy tab. - Overwriting forum overflow rule in order to prevent scroll - Css fix: image with large height wouldnt get out of his div - Fixed clicking on div doesnt insert img

--- a/assets/css/webInterface.css
+++ b/assets/css/webInterface.css
@@ -1,7 +1,11 @@
+/**************OVER WRITING FORUM CSS****************/
+.cadre-repondre{
+	overflow-x: initial !important;
+}
 /*********************EMOJIS*************************/
 
 .emojisDropdown {
-	width: 250px;
+	width: 300px;
 }
 
 .emojisDropdown.dropdown-menu {
@@ -23,8 +27,8 @@
 
 .emojisDropdown .emojisDropdownContainer {
 	white-space: normal;
-	max-height: 100px;
-	overflow-y: scroll
+	max-height: 115px;
+	overflow-y: auto;
 }
 
 .emojisDropdown .emojisDropdownContainer .emojisDropdownItems {
@@ -55,6 +59,8 @@
 .emojisDropdown .emojisDropdownItems img {
 	width: auto;
 	height: auto;
+	max-height: 50px;
+	max-width: 50px;
 	display: inline-block;
 }
 
@@ -64,17 +70,17 @@
 }
 
 .emojisDropdown .customEmojiInput {
-	width: 165px;
+	width: 215px;
 	font-size: 10px;
 	padding: 0 5px;
 	margin-left: 5px;
 }
 
-.emojisDropdown #customEmojis button {
+.emojisDropdown .customEmojis button {
 	margin-left: 5px;
 }
 
-.emojisDropdown .customEmojiBtnImage {
+.emojisDropdown .extensionBtnImage {
 	padding: 0;
 	margin: 0;
 	vertical-align: middle;
@@ -93,8 +99,62 @@
 	border: 1px solid #867c7c;
 }
 
+.emojisDropdown .giphy .giphyInput {
+	width: 245px;
+	font-size: 10px;
+	padding: 0 5px;
+	margin-left: 5px;
+}
+
+.emojisDropdown .addEmojiToCustom {
+	background-color: #444444;
+	border-radius: 50%;
+	position: absolute;
+	font-size: 10px;
+	right: 0px;
+	padding-left: 1px;
+	color: #62c462;
+	top: 0px;
+	border: 1px solid #867c7c;
+	padding-left:2px;
+}
+
+.emojisDropdown .giphy .hiddenEmoji{
+	display: none
+}
+
+.emojisDropdown .giphy .seeMoreGiphyGifs{
+	text-align: center;
+	font-size: 12px;
+}
+
+.emojisDropdown .giphy .seeMoreGiphyGifs:hover{
+	cursor: pointer;
+	text-decoration: underline;
+	color: darkcyan;
+}
+
+.emojisDropdown .giphy .giphySearchGifBtn{
+	margin-left: 5px
+}
+
+.emojisDropdown .giphy .seeMoreGiphyGifs.hideSeeMoreText{
+	display: none
+}
+
+.emojisDropdown .giphy .poweredByGiphy{
+	text-align: right
+}
+
+.emojisDropdown .giphy .poweredByGiphy img{
+	height: 14px;
+	width: auto;
+}
 
 /*********************LOADING MESSAGE************************/
+.loadingContainer{
+	margin:10px 0;
+}
 
 .loadingText {
 	text-align: center;
